# swiss_electricity_load

./: .dockerignore  .gitignore  DEPLOY_AZURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy-azure-dashboard.yml
data/raw/: EnergieUebersichtCH-2026.xlsx
deploy/azure/: containerapp-mounted.yaml  deploy.ps1
notebooks/: fetch.ipynb
src/: fetch.ipynb
src/swiss_electricity_load/: __init__.py  dashboard.py  features.py  fullflow.py  model.py  pipeline.py  predict.py  quality.py  swissgrid.py  weather.py
tests/: conftest.py  test_dashboard.py  test_features.py  test_fullflow.py  test_model.py  test_pipeline.py  test_predict.py  test_quality.py  test_swissgrid.py  test_weather.py
