[project]
name = "swiss-electricity-load"
version = "0.1.0"
description = ""
authors = [
    {name = "David Alvarez",email = "vigocpc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (==15.0.2)",
]

[project.scripts]
swiss-load-pipeline = "swiss_electricity_load.pipeline:main"

[tool.poetry]
packages = [{ include = "swiss_electricity_load", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
