[project]
name = "swiss-electricity-load"
version = "0.1.0"
description = ""
authors = [
    {name = "David Alvarez",email = "vigocpc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (==15.0.2)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
]

[project.scripts]
swiss-load-pipeline = "swiss_electricity_load.pipeline:main"
swiss-load-train = "swiss_electricity_load.model:main"
swiss-load-predict = "swiss_electricity_load.predict:main"
swiss-load-fullflow = "swiss_electricity_load.fullflow:main"
swiss-load-dashboard = "swiss_electricity_load.dashboard:launch"

[tool.poetry]
packages = [{ include = "swiss_electricity_load", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
